tests/cases/functions/errors/function-wrong-arg-count.ari
fn add(left: i64, right: i64) -> i64 {
  return left + right;
}

fn main() -> i64 {
  return add(1);
}
